force-app/main/default/objects/WhatsApp_Message__c/WhatsApp_Message__c.object-meta.xml
<CustomObject>
<description>Outbound and inbound WhatsApp tracking record.</description>
<label>WhatsApp Message</label>
<nameField>
<displayFormat>WA-{000000}</displayFormat>
<label>WhatsApp Message Name</label>
<type>AutoNumber</type>
</nameField>
<pluralLabel>WhatsApp Messages</pluralLabel>
<sharingModel>Private</sharingModel>
</CustomObject>