force-app/main/default/objects/WhatsApp_Message__c/fields/Body_Text__c.field-meta.xml
<CustomField>
    <fullName>Body_Text__c</fullName>
    <label>Body Text</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>