force-app/main/default/objects/WhatsApp_Message__c/fields/Button_Payload__c.field-meta.xml
<CustomField>
    <fullName>Button_Payload__c</fullName>
    <label>Button Payload</label>
    <length>100</length>
    <type>Text</type>
</CustomField>