force-app/main/default/objects/WhatsApp_Message__c/fields/Care_Journey__c.field-meta.xml
<CustomField>
    <fullName>Care_Journey__c</fullName>
    <label>Care Journey</label>
    <referenceTo>Care_Journey__c</referenceTo>
    <relationshipLabel>Care Journey Records</relationshipLabel>
    <relationshipName>WhatsAppMessageCareJourney</relationshipName>
    <type>Lookup</type>
</CustomField>