force-app/main/default/objects/WhatsApp_Message__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
<fullName>Correlation_Id__c</fullName>
<label>Correlation Id</label>
<type>Text</type>
<length>80</length>
</CustomField>