force-app/main/default/objects/WhatsApp_Message__c/fields/Direction__c.field-meta.xml
<CustomField>
<fullName>Direction__c</fullName>
<label>Direction</label>
<type>Picklist</type>
<required>true</required>
<valueSet>
<valueSetDefinition>
<value>
<fullName>Inbound</fullName>
</value>
<value>
<fullName>Outbound</fullName>
<default>true</default>
<label>Outbound</label>
</value>
</valueSetDefinition>
</valueSet>
</CustomField>