force-app/main/default/objects/WhatsApp_Message__c/fields/External_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Message_Id__c</fullName>
    <label>External Message Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>