force-app/main/default/objects/WhatsApp_Message__c/fields/Media_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Media_Document_Id__c</fullName>
    <label>Media Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>