force-app/main/default/objects/WhatsApp_Message__c/fields/Message_Body__c.field-meta.xml
<CustomField>
<fullName>Message_Body__c</fullName>
<label>Message Body</label>
<type>LongTextArea</type>
<length>32768</length>
</CustomField>