force-app/main/default/objects/WhatsApp_Message__c/fields/Message_Template__c.field-meta.xml
<CustomField>
    <fullName>Message_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>Message_Template__c</referenceTo>
    <relationshipLabel>Template Records</relationshipLabel>
    <relationshipName>WhatsAppMessageMessageTemplate</relationshipName>
    <type>Lookup</type>
</CustomField>