force-app/main/default/objects/WhatsApp_Message__c/fields/Provider_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Message_Id__c</fullName>
    <externalId>true</externalId>
    <label>Provider Message ID</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>