force-app/main/default/objects/WhatsApp_Message__c/fields/Safety_Keyword_Hit__c.field-meta.xml
<CustomField>
    <fullName>Safety_Keyword_Hit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safety Keyword Hit</label>
    <type>Checkbox</type>
</CustomField>