force-app/main/default/objects/WhatsApp_Message__c/fields/Status__c.field-meta.xml
<CustomField>
<fullName>Status__c</fullName>
<label>Status</label>
<type>Picklist</type>
<required>true</required>
<valueSet>
<valueSetDefinition>
<value>
<fullName>Queued</fullName>
<default>true</default>
<label>Queued</label>
</value>
<value>
<fullName>Sent</fullName>
</value>
<value>
<fullName>Delivered</fullName>
</value>
<value>
<fullName>Failed</fullName>
</value>
</valueSetDefinition>
</valueSet>
</CustomField>