force-app/main/default/objects/WhatsApp_Message__c/fields/Template__c.field-meta.xml
<CustomField>
<fullName>Template__c</fullName>
<label>Template</label>
<type>Lookup</type>
<referenceTo>Message_Template__c</referenceTo>
<relationshipLabel>Template Records</relationshipLabel>
<relationshipName>WhatsAppMessageTemplate</relationshipName>
</CustomField>